# Creative-Approval

./: .gitignore  README.md  dockerfile  main.py  pyproject.toml
src/: main.py
src/core/: config.py  dependencies.py  logging.py
src/models/: app_metrics.py  approval_status.py  health_status.py  validation_rule.py
src/routers/: main_router.py
src/services/: content_validator.py
src/utils/: image_analysis.py
tests/: test_main.py
tests/utils/: image_creation.py
